#now set the runtime output directory for lower lever executables to the test directory - this should occur before adding additional subdirectories
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_TEST_DIRECTORY})
add_subdirectory(DataLogger)
add_subdirectory(FDTD)
add_subdirectory(InputParser)
add_subdirectory(SimManager)
add_subdirectory(SimEngine)
add_subdirectory(Factories)
add_subdirectory(Common)
add_subdirectory(SourceControl)
add_subdirectory(GridControl)
add_subdirectory(TimeControl)
add_subdirectory(RandomVector)
